force-app/main/default/objects/Job_Resource__c/Job_Resource__c.object-meta.xml
<CustomObject>
    <description>Tools, Parts, and Consumables needed to complete a maintenance job.</description>
    <label>Job Resource</label>
    <nameField>
        <displayFormat>JM-{0000}</displayFormat>
        <label>Job Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>