force-app/main/default/objects/Job_Resource__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to inventory item needed for a Job.</description>
    <label>Inventory Item</label>
    <referenceTo>Vehicle_Inventory_Item__c</referenceTo>
    <relationshipLabel>Job Resources</relationshipLabel>
    <relationshipName>Job_Resources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>