force-app/main/default/objects/Job_Resource__c/fields/Required_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Required_Quantity__c</fullName>
    <description>Quantity to required to complete Job</description>
    <label>Required Quantity</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>