force-app/main/default/objects/Job_Resource__c/fields/Vehicle_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Maintenance__c</fullName>
    <description>Master lookup to Maintenance Job</description>
    <label>Vehicle Maintenance</label>
    <referenceTo>Vehicle_Maintenance__c</referenceTo>
    <relationshipLabel>Job Resources</relationshipLabel>
    <relationshipName>Job_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>